<resources>
    <string name="app_name">Rahul Gupta</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_category">Category</string>
    <string name="menu_expense">My Expense</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="delete_category">Delete Category</string>
    <string name="delete_cat_dialog_msg">Are You Sure you want to Delete Selected Items?</string>
    <string name="delete_cat_err_msg">No Items Selected</string>
    <string name="delete_string">Delete</string>
    <string name="category_deleted">Category Deleted</string>
    <string name="add_category">Add Category</string>
    <string name="category_name_string">Category Name</string>
    <string name="done_string">Done</string>
    <string name="edit_category">Edit Category</string>
    <string name="error_empty_field">Empty Field</string>
    <string name="category_updated">Category Updated</string>
    <string name="category_added">Category Added</string>
    <string name="enter_category">Enter Category</string>
    <string name="todo">TODO</string>
    <string name="cat_general">General</string>
    <string name="cat_clothes">Clothes</string>
    <string name="cat_entertainment">Entertainment</string>
    <string name="edit_message">Text Message</string>
    <string name="button_send">Send</string>
    <string name="select_all">Select All</string>
    <string name="share">Share</string>
    <string name="sort">Sort</string>
    <string name="ascending">Ascending</string>
    <string name="descending">Descending</string>
    <string name="share_app">Share</string>
    <string name="share_via">Share via...</string>
    <string name="search">Search</string>
    <string name="add">Add</string>
</resources>
